--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 3e0a4c8
+	base = de77512
 	trimbase = 
 	parent = release/hydro/husky_teleop
-	previous = 
+	previous = 3e0a4c8
