--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 796098b
+	base = 0c7bbfb
 	trimbase = 
 	parent = debian/hydro/husky_teleop
-	previous = 
+	previous = 796098b
