Store releaser history

--- a/releaser_history.json
+++ b/releaser_history.json
@@ -1,1 +1,1 @@
-{"0.0.1": ["Alex Bencz", "abencz@clearpathrobotics.com"]}
+{"0.0.1": ["Alex Bencz", "abencz@clearpathrobotics.com"], "0.0.2": ["Mike Purvis", "mpurvis@clearpathrobotics.com"]}
